# tuning_mpc

./: .gitignore  LICENSE  README.md  additional_experiments.py  paper_experiments.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
decay_mpc/controllers/: decay_based_mpc.py  decay_based_mpc_2.py  frequency_aware_mpc.py  mpc_penalize_e_ddot.py  mpc_penalize_ee_vel.py  mpc_penalize_qdot.py  vanilla_mpc_controller.py
decay_mpc/environments/: environment_2dof.py  environment_3dof.py
decay_mpc/utils/: simulator.py
