[project]
name = "decay_mpc"
version = "0.1.0"
description = "A description of my package"
readme = "README.md"
authors = [
    { name="Johan Ubbink", email="johan.ubbink@gmail.com" }
]
dependencies = [
    # List your package dependencies here
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"